    - Raise ValueError in AcquireItem if the Acquire process is shut down
      instead of segfaulting.

  * Other stuff:
    - Merge releases 0.7.10.4 - 0.7.12.0 from unstable.
    - Merge Configuration,ConfigurationPtr,ConfigurationSub into one type.
    - Simplify the whole build process by using a single setup.py.
    - The documentation has been restructured and enhanced with tutorials.

 -- Julian Andres Klode <jak@debian.org>  Wed, 15 Jul 2009 14:56:24 +0200

python-apt (0.7.91) experimental; urgency=low

  [ Julian Andres Klode ]
  * Rename where needed according to PEP 8 conventions (Closes: #481061)
  * Where possible, derive apt.package.Record from collections.Mapping.
  * ActionGroups can be used as a context manager for the 'with' statement.
  * utils/migrate-0.8.py: Helper to check Python code for deprecated functions,
    attributes,etc. Has to be run from the python-apt source tree, but can be
    used for all Python code using python-apt.
  * debian/control: Only recommend libjs-jquery (Closes: #527543).

  [ Stefano Zacchiroli ]
  * debian/python-apt.doc-base: register the documentation with the
    doc-base system (Closes: #525134)

  [ Sebastian Heinlein ]
  * apt/package.py: Add Package.get_version() which returns a Version instance
    for the given version string or None (Closes: #523998)

 -- Julian Andres Klode <jak@debian.org>  Fri, 05 Jun 2009 19:36:45 +0200

python-apt (0.7.90) experimental; urgency=low

  * Introduce support for Python 3 (Closes: #523645)

  * Support the 'in' operator (e.g. "k in d") in Configuration{,Ptr,Sub}
    objects (e.g. apt_pkg.Config) and in TagSections (apt_pkg.ParseSection())
  * Replace support for file objects with a more generic support for any object
    providing a fileno() method and for file descriptors (integers).
  * Add support for the Breaks fields
  * Only create Package objects when they are requested, do not keep them in
    a dict. Saves 10MB for 25,000 packages on my machine.