@@ -437,6 +437,20 @@ class UbuntuDistribution(Distribution):
         Distribution.get_mirrors(
             self, mirror_template="http://%s.archive.ubuntu.com/ubuntu/")
 
+def _lsb_release():
+    """Call lsb_release --all and return a mapping."""
+    from subprocess import Popen, PIPE
+    import errno
+    result = {'Codename': 'sid', 'Distributor ID': 'Debian',
+              'Description': 'Debian GNU/Linux unstable (sid)',
+              'Release': 'unstable'}
+    try:
+        out = Popen(['lsb_release', '--all'], stdout=PIPE).communicate()[0]
+        result.update(l.split(":\t") for l in out.split("\n") if ':\t' in l)
+    except OSError, exc:
+        if exc.errno != errno.ENOENT:
+            print 'WARNING: lsb_release failed, using defaults:', exc
+    return result
 
 def get_distro(id=None, codename=None, description=None, release=None):
     """
@@ -448,12 +462,11 @@ def get_distro(id=None, codename=None, description=None, release=None):
     """
     # make testing easier
     if not (id and codename and description and release):
-        lsb_info = []
-        for lsb_option in ["-i", "-c", "-d", "-r"]:
-            pipe = os.popen("lsb_release %s -s" % lsb_option)
-            lsb_info.append(pipe.read().strip())
-            del pipe
-        (id, codename, description, release) = lsb_info
+        result = _lsb_release()
+        id = result['Distributor ID']
+        codename = result['Codename']
+        description = result['Description']
+        release = result['Release']
     if id == "Ubuntu":
         return UbuntuDistribution(id, codename, description, release)
     elif id == "Debian":
