@@ -32,8 +32,10 @@ python-apt (0.7.92) UNRELEASED; urgency=low
     - Merge Configuration,ConfigurationPtr,ConfigurationSub into one type.
     - Simplify the whole build process by using a single setup.py.
     - The documentation has been restructured and enhanced with tutorials.
+    - Only recommend lsb-release instead of depending on it. Default to
+      Debian unstable if lsb_release is not available.
 
- -- Julian Andres Klode <jak@debian.org>  Wed, 15 Jul 2009 14:56:24 +0200
+ -- Julian Andres Klode <jak@debian.org>  Sun, 02 Aug 2009 16:35:42 +0200
 
 python-apt (0.7.91) experimental; urgency=low
 
